612452 fix for extra space in print documnet

--- a/src/Defra.PTS.Web.UI/wwwroot/stylesheets/application.css
+++ b/src/Defra.PTS.Web.UI/wwwroot/stylesheets/application.css
@@ -1298,18 +1298,6 @@ p + .govuk-heading-s,
     margin-left: max(15px, calc(15px + env(safe-area-inset-left)));
   }
 }
-@media (min-width: 40.0625em) {
-  .govuk-width-container {
-    margin-right: 30px;
-    margin-left: 30px;
-  }
-  @supports (margin: max(calc(0px))) {
-    .govuk-width-container {
-      margin-right: max(30px, calc(15px + env(safe-area-inset-right)));
-      margin-left: max(30px, calc(15px + env(safe-area-inset-left)));
-    }
-  }
-}
 @media (min-width: 1020px) {
   .govuk-width-container {
     margin-right: auto;
